--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>QED42 Chat App</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link href="font-awesome.min.css" rel="stylesheet"/>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.js"></script> -->
 
 </head>
